[metadata]
name = cipher-typer
version = 0.1.0
description = command line utility to encrypt and decrypt text
author = Andrew White
author_email = white-aj@outlook.com
url = https://github.com/aj-white/cipher_typer
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
    typer>=0.3.2
python_requires = >=3.6.1

[option.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    cipher-typer-cli = ...