[metadata]
name = cipher-typer
version = 0.1.0
description = command line utility to encrypt and decrypt text
author = Andrew White
author_email = white-aj@outlook.com
url = ...

[options]
packages = find:

[option.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    cipher-typer-cli = ...
